# dux

./: ARCHITECTURE.md  README.md  pyproject.toml
src/duviz/: cli.py  service.py  tui.py
src/dux/: cli.py  db.py  model.py  scanner.py  service.py  tui.py
tests/: test_service.py
