[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dux"
version = "0.1.0"
description = "Fast multi-threaded disk usage indexer with a terminal UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "textual>=0.70",
  "rich>=13.7",
]

[project.scripts]
dux = "dux.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
